--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -315,13 +315,15 @@
             </div>
             <div class="col-md-6 mb-3">
               <div class="feature-tile">
-                <div class="feature-name">F4 = mean(std(Ax,Ay,Az))</div>
+                <div class="feature-name">F4 = Variabilidad promedio</div>
                 <div id="f4" class="feature-val value">—</div>
               </div>
             </div>
             <div class="col-md-12 mb-1">
               <div class="feature-tile">
-                <div class="feature-name">F5 = mean(|A|)</div>
+                <div class="feature-name">
+                  F5 = Magnitud media del movimiento
+                </div>
                 <div id="f5" class="feature-val value">—</div>
               </div>
             </div>
